--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -501,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Going to first see what are the missing values"
+    "Check for missing values"
    ]
   },
   {
@@ -525,7 +525,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I want to look at the economic indicatiors and if there are any correlations betweeen wealth and economic indicators such as GDP, CPI, and tax rates? So to clean my data im going to clean empty indicators in NetWorth_Billion gdp_country, cpi_country, and total_tax_rate_country."
+    "I want to look at the economic indicatiors and if there are any correlations betweeen wealth and economic indicators such as GDP, CPI, and tax rate.\n",
+    " So to clean my data im going to clean empty indicators in NetWorth_Billion gdp_country, cpi_country, and total_tax_rate_country."
    ]
   },
   {
@@ -554,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I am going to take a look at the wealth distribution analysis as in what industries are the richest, but it's already clean. But we are going to change the scale for the final worth as it is in millions, and It would be neater in Billions. The name is also changed to a more conventional name as well. "
+    "I am going to take a look at the wealth distribution analysis as in what industries are the richest, but it has no null values. We are going to change the scale for the final worth as it is in millions, and It would be neater in Billions. The name is also changed to a more conventional name as well. "
    ]
   },
   {
@@ -578,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Im going to look at the demographics.im going to clean up the age and birth year by making any null data points in to the median of the data, since the median is less sensitive to extreme values then the mean, allowing a more general idea and preservation of the distribution.\n",
+    "Im going to look at the demographics.So im going to clean up the age and birth year by making any null data points in to the median of the data, since the median is less sensitive to extreme values then the mean, allowing a more general idea and preservation of the distribution.\n",
     "For the null values in the country and birthdate category I am going to completely remove them as there isn't a significant amount (<1.5%)."
    ]
   },
@@ -814,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -822,17 +823,6 @@
      "output_type": "stream",
      "text": [
       "Outliers for Age:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/fv/n8l4v1fs1t38jml86k3v798r0000gn/T/ipykernel_59671/1654119399.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  outliers_age.rename(columns={'NetWorth_Billion': 'Amount (Billions)'}, inplace=True)\n"
      ]
     },
     {
@@ -865,83 +855,126 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>823</th>\n",
-       "      <td>Clemente Del Vecchio</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>3.5</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Bernard Arnault &amp; family</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>211.0</td>\n",
        "      <td>Fashion &amp; Retail</td>\n",
-       "      <td>Italy</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>824</th>\n",
-       "      <td>Leonardo Maria Del Vecchio</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>Fashion &amp; Retail</td>\n",
-       "      <td>Italy</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Elon Musk</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>Automotive</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>825</th>\n",
-       "      <td>Luca Del Vecchio</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>Fashion &amp; Retail</td>\n",
-       "      <td>Italy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1908</th>\n",
-       "      <td>Alexandra Andresen</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>Diversified</td>\n",
-       "      <td>Norway</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1909</th>\n",
-       "      <td>Katharina Andresen</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>Diversified</td>\n",
-       "      <td>Norway</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2113</th>\n",
-       "      <td>Wang Zelong</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>Metals &amp; Mining</td>\n",
-       "      <td>China</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2414</th>\n",
-       "      <td>Ryan Breslow</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>1.1</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Jeff Bezos</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>114.0</td>\n",
        "      <td>Technology</td>\n",
        "      <td>United States</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Larry Ellison</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Warren Buffett</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>Finance &amp; Investments</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2635</th>\n",
+       "      <td>Yu Rong</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Healthcare</td>\n",
+       "      <td>China</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2636</th>\n",
+       "      <td>Richard Yuengling, Jr.</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Food &amp; Beverage</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2637</th>\n",
+       "      <td>Zhang Gongyun</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Manufacturing</td>\n",
+       "      <td>China</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2638</th>\n",
+       "      <td>Zhang Guiping &amp; family</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Real Estate</td>\n",
+       "      <td>China</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2639</th>\n",
+       "      <td>Inigo Zobel</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Diversified</td>\n",
+       "      <td>Philippines</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2397 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      personName   age  Amount (Billions)          category  \\\n",
-       "823         Clemente Del Vecchio  18.0                3.5  Fashion & Retail   \n",
-       "824   Leonardo Maria Del Vecchio  27.0                3.5  Fashion & Retail   \n",
-       "825             Luca Del Vecchio  21.0                3.5  Fashion & Retail   \n",
-       "1908          Alexandra Andresen  26.0                1.5       Diversified   \n",
-       "1909          Katharina Andresen  27.0                1.5       Diversified   \n",
-       "2113                 Wang Zelong  26.0                1.4   Metals & Mining   \n",
-       "2414                Ryan Breslow  28.0                1.1        Technology   \n",
+       "                    personName   age  Amount (Billions)  \\\n",
+       "0     Bernard Arnault & family  74.0              211.0   \n",
+       "1                    Elon Musk  51.0              180.0   \n",
+       "2                   Jeff Bezos  59.0              114.0   \n",
+       "3                Larry Ellison  78.0              107.0   \n",
+       "4               Warren Buffett  92.0              106.0   \n",
+       "...                        ...   ...                ...   \n",
+       "2635                   Yu Rong  51.0                1.0   \n",
+       "2636    Richard Yuengling, Jr.  80.0                1.0   \n",
+       "2637             Zhang Gongyun  60.0                1.0   \n",
+       "2638    Zhang Guiping & family  71.0                1.0   \n",
+       "2639               Inigo Zobel  66.0                1.0   \n",
        "\n",
-       "            country  \n",
-       "823           Italy  \n",
-       "824           Italy  \n",
-       "825           Italy  \n",
-       "1908         Norway  \n",
-       "1909         Norway  \n",
-       "2113          China  \n",
-       "2414  United States  "
+       "                   category        country  \n",
+       "0          Fashion & Retail         France  \n",
+       "1                Automotive  United States  \n",
+       "2                Technology  United States  \n",
+       "3                Technology  United States  \n",
+       "4     Finance & Investments  United States  \n",
+       "...                     ...            ...  \n",
+       "2635             Healthcare          China  \n",
+       "2636        Food & Beverage  United States  \n",
+       "2637          Manufacturing          China  \n",
+       "2638            Real Estate          China  \n",
+       "2639            Diversified    Philippines  \n",
+       "\n",
+       "[2397 rows x 5 columns]"
       ]
      },
      "metadata": {},
@@ -953,7 +986,7 @@
     "lower_bound = Q1 - 1.5 * IQR\n",
     "upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
-    "outliers_age = df[(df['age'] < lower_bound) | (df['age'] > upper_bound)]\n",
+    "outliers_age = df[(df['age'] < lower_bound) | (df['age'] > upper_bound)].copy()\n",
     "\n",
     "# Rename\n",
     "outliers_age.rename(columns={'NetWorth_Billion': 'Amount (Billions)'}, inplace=True)\n",
@@ -1869,7 +1902,9 @@
     "2. Pandas for data manipulation\n",
     "3. Seaborn for data viz\n",
     "4. Matplotlib for data viz\n",
-    "4. Chatgpt for info on CPI and tax rate - https://chat.openai.com/share/43ebb145-d23a-4833-9a83-27d2efc0576d\n"
+    "4. Chatgpt for info on CPI and tax rate - https://chat.openai.com/share/43ebb145-d23a-4833-9a83-27d2efc0576d\n",
+    "6. Source for title image - https://thehill.com/opinion/finance/553554-us-billionaire-wealth-skyrocketed-55-percent-during-pandemic-accelerating/\n",
+    "    \n"
    ]
   }
  ],
