--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "[2640 rows x 35 columns]"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -823,6 +823,17 @@
      "output_type": "stream",
      "text": [
       "Outliers for Age:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/fv/n8l4v1fs1t38jml86k3v798r0000gn/T/ipykernel_59671/1654119399.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  outliers_age.rename(columns={'NetWorth_Billion': 'Amount (Billions)'}, inplace=True)\n"
      ]
     },
     {
@@ -855,126 +866,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bernard Arnault &amp; family</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>211.0</td>\n",
+       "      <th>823</th>\n",
+       "      <td>Clemente Del Vecchio</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>3.5</td>\n",
        "      <td>Fashion &amp; Retail</td>\n",
-       "      <td>France</td>\n",
+       "      <td>Italy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Elon Musk</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>Automotive</td>\n",
-       "      <td>United States</td>\n",
+       "      <th>824</th>\n",
+       "      <td>Leonardo Maria Del Vecchio</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>Fashion &amp; Retail</td>\n",
+       "      <td>Italy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jeff Bezos</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>114.0</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>United States</td>\n",
+       "      <th>825</th>\n",
+       "      <td>Luca Del Vecchio</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>Fashion &amp; Retail</td>\n",
+       "      <td>Italy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Larry Ellison</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Warren Buffett</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>Finance &amp; Investments</td>\n",
-       "      <td>United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2635</th>\n",
-       "      <td>Yu Rong</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Healthcare</td>\n",
-       "      <td>China</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2636</th>\n",
-       "      <td>Richard Yuengling, Jr.</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Food &amp; Beverage</td>\n",
-       "      <td>United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2637</th>\n",
-       "      <td>Zhang Gongyun</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Manufacturing</td>\n",
-       "      <td>China</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2638</th>\n",
-       "      <td>Zhang Guiping &amp; family</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Estate</td>\n",
-       "      <td>China</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2639</th>\n",
-       "      <td>Inigo Zobel</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>1908</th>\n",
+       "      <td>Alexandra Andresen</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>Diversified</td>\n",
-       "      <td>Philippines</td>\n",
+       "      <td>Norway</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1909</th>\n",
+       "      <td>Katharina Andresen</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Diversified</td>\n",
+       "      <td>Norway</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2113</th>\n",
+       "      <td>Wang Zelong</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Metals &amp; Mining</td>\n",
+       "      <td>China</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2414</th>\n",
+       "      <td>Ryan Breslow</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2397 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    personName   age  Amount (Billions)  \\\n",
-       "0     Bernard Arnault & family  74.0              211.0   \n",
-       "1                    Elon Musk  51.0              180.0   \n",
-       "2                   Jeff Bezos  59.0              114.0   \n",
-       "3                Larry Ellison  78.0              107.0   \n",
-       "4               Warren Buffett  92.0              106.0   \n",
-       "...                        ...   ...                ...   \n",
-       "2635                   Yu Rong  51.0                1.0   \n",
-       "2636    Richard Yuengling, Jr.  80.0                1.0   \n",
-       "2637             Zhang Gongyun  60.0                1.0   \n",
-       "2638    Zhang Guiping & family  71.0                1.0   \n",
-       "2639               Inigo Zobel  66.0                1.0   \n",
+       "                      personName   age  Amount (Billions)          category  \\\n",
+       "823         Clemente Del Vecchio  18.0                3.5  Fashion & Retail   \n",
+       "824   Leonardo Maria Del Vecchio  27.0                3.5  Fashion & Retail   \n",
+       "825             Luca Del Vecchio  21.0                3.5  Fashion & Retail   \n",
+       "1908          Alexandra Andresen  26.0                1.5       Diversified   \n",
+       "1909          Katharina Andresen  27.0                1.5       Diversified   \n",
+       "2113                 Wang Zelong  26.0                1.4   Metals & Mining   \n",
+       "2414                Ryan Breslow  28.0                1.1        Technology   \n",
        "\n",
-       "                   category        country  \n",
-       "0          Fashion & Retail         France  \n",
-       "1                Automotive  United States  \n",
-       "2                Technology  United States  \n",
-       "3                Technology  United States  \n",
-       "4     Finance & Investments  United States  \n",
-       "...                     ...            ...  \n",
-       "2635             Healthcare          China  \n",
-       "2636        Food & Beverage  United States  \n",
-       "2637          Manufacturing          China  \n",
-       "2638            Real Estate          China  \n",
-       "2639            Diversified    Philippines  \n",
-       "\n",
-       "[2397 rows x 5 columns]"
+       "            country  \n",
+       "823           Italy  \n",
+       "824           Italy  \n",
+       "825           Italy  \n",
+       "1908         Norway  \n",
+       "1909         Norway  \n",
+       "2113          China  \n",
+       "2414  United States  "
       ]
      },
      "metadata": {},
@@ -986,7 +954,7 @@
     "lower_bound = Q1 - 1.5 * IQR\n",
     "upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
-    "outliers_age = df[(df['age'] < lower_bound) | (df['age'] > upper_bound)].copy()\n",
+    "outliers_age = df[(df['age'] < lower_bound) | (df['age'] > upper_bound)]\n",
     "\n",
     "# Rename\n",
     "outliers_age.rename(columns={'NetWorth_Billion': 'Amount (Billions)'}, inplace=True)\n",
@@ -1011,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
